/*
 * Shackle Reservation Service
 * Stream of reservations
 */

 syntax = "proto3";

 package shackle.reservation;
 
 option java_package = "shackle.reservation.grpc";

 service ReservationService {
  rpc StreamReservations(Empty) returns (stream Reservation);
 }

 message Empty {

 }

 /*
 * A full hotel reservation.
 * [matthijs] Moved this definition from the matching_service.proto
 */
message Reservation {
  /* Timestamp the reservation was received. */
  int64 timestamp = 1;

  /* The internal identifier of the reservation; always present. */
  int64 internal_id = 2;

  /* 
   * [matthijs] Not entirely sure about this addition of oneof. Does seem to model the data better, 
   * but not sure if this really has a benefit or could only complicate stuff when this changes
   */
  oneof externalId {
    /* The booking confirmation number; this is present for direct bookings with the hotel. */
    string booking_confirmation_number = 3;

    /* Confirmation code that is present for online bookings;
    * the guest receives this code in the confirmation message from the booking engine.
    */
    string web_confirmation_code = 4;

    /* Travel agent confirmation code; only present for travel agent bookings.
    * The guest may have received the confirmation code from their agent.
    */
    string travel_agent_confirmation_code = 5;
  }
  
  /* Guest details */
  GuestDetails guest_details = 10;

  /* Arrival date */
  LocalDate arrival_date = 11;
  /* Departure date */
  LocalDate departure_date = 12;
}

message LocalDate {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message GuestDetails {
  string first_name = 1;
  string last_name = 2;
  string title = 3;

  string phone_number = 11;
  string email = 12;

  string address = 21;
  string city = 22;
  string postal_code = 23;
  string country = 24;

  string company_name = 31;
}

 